--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 mongodbUrl = mongodb+srv://nguyensu:RDNUbHAK3YqdSMNg@cluster0.2c3qnal.mongodb.net/?retryWrites=true&w=majority
-jwtKey = "ktool1@1"
+jwtKey = ktool1@1
